[gd_scene load_steps=10 format=3 uid="uid://7wcdp7pbpe22"]

[ext_resource type="Script" path="res://Player.gd" id="1_8vfxu"]
[ext_resource type="Script" path="res://node_2d.gd" id="1_ow0d7"]
[ext_resource type="PackedScene" uid="uid://xpyiek1gmbb8" path="res://ball.tscn" id="2_pr2w7"]
[ext_resource type="PackedScene" uid="uid://8fcca8mii6sm" path="res://brick.tscn" id="4_aygv4"]
[ext_resource type="Texture2D" uid="uid://ckvxge26j6e0h" path="res://assets/Warp_Pipe_-_2D_shaded.webp" id="5_34y0h"]
[ext_resource type="Texture2D" uid="uid://dmww44lsilsbk" path="res://assets/fundo.jpg" id="5_stg42"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ac6hi"]
size = Vector2(772.75, 21.2486)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2v5go"]
size = Vector2(104.5, 32.1409)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qis0w"]
size = Vector2(106.5, 39.75)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ow0d7")
metadata/_edit_horizontal_guides_ = [3.0]

[node name="Fundo" type="Sprite2D" parent="."]
position = Vector2(310, 619.25)
scale = Vector2(1, 1.14921)
texture = ExtResource("5_stg42")

[node name="Top" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2(301, -49)
shape = SubResource("RectangleShape2D_ac6hi")

[node name="Bottom" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2(306, 734)
shape = SubResource("RectangleShape2D_ac6hi")

[node name="Left" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2(-31, 343)
rotation = 1.5708
shape = SubResource("RectangleShape2D_ac6hi")

[node name="Right" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2(618, 343)
rotation = 1.5708
shape = SubResource("RectangleShape2D_ac6hi")

[node name="Ball" parent="." instance=ExtResource("2_pr2w7")]
position = Vector2(0, -95)

[node name="Player" type="CharacterBody2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_8vfxu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(294, 706)
shape = SubResource("RectangleShape2D_2v5go")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
position = Vector2(292.742, 717.209)
scale = Vector2(-0.239941, 0.0918624)
texture = ExtResource("5_34y0h")

[node name="Area2D" type="Area2D" parent="Player"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
position = Vector2(292.75, 709)
shape = SubResource("RectangleShape2D_qis0w")

[node name="Bricks" type="Node2D" parent="."]

[node name="Brick" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(1, 3)

[node name="Brick2" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(119, 3)

[node name="Brick3" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(239, 3)

[node name="Brick4" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(358, 3)

[node name="Brick5" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(476, 3)

[node name="Brick6" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(3, 108)

[node name="Brick7" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(181, 54)

[node name="Brick8" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(300, 54)

[node name="Brick9" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(417, 54)

[node name="Brick10" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(121, 108)

[node name="Brick11" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(239, 108)

[node name="Brick12" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(358, 108)

[node name="Brick13" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(475, 108)

[node name="Brick14" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(62, 54)

[node name="Brick15" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(62, 162)

[node name="Brick16" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(184, 162)

[node name="Brick17" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(303, 162)

[node name="Brick18" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(420, 162)

[node name="Brick19" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(124, 216)

[node name="Brick20" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(242, 216)

[node name="Brick21" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(361, 216)

[node name="Brick22" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(478, 216)

[node name="Brick23" parent="Bricks" instance=ExtResource("4_aygv4")]
position = Vector2(4, 216)

[connection signal="body_entered" from="Top" to="." method="_on_top_body_entered"]
[connection signal="body_entered" from="Bottom" to="." method="_on_bottom_body_entered"]
[connection signal="body_entered" from="Left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_right_body_entered"]
[connection signal="body_entered" from="Player/Area2D" to="." method="_on_area_2d_body_entered"]
